# TopTreeAnalysisBase

./: .gitignore  AnomCoupDict.cc  AnomCoupDict.h  AnomCoupLinkDef.h  CMakeLists.txt  Dict.cc  Dict.h  LinkDef.h  Makefile  README.md
Analysis/interface/: CutsTable.h  EventBDT.h  HadronicTopReco.h  Trigger.h  Zpeak.h
Analysis/src/: CutsTable.cc  EventBDT.cc  HadronicTopReco.cc  Trigger.cc  Zpeak.cc
Calibrations/: SFb-mujet_payload-11Feb2013.txt
Calibrations/BTagging/: CSVv2Moriond17_2017_1_26_BtoH.csv  CSVv2_13TeV_25ns_combToMujets.csv  CSVv2_80X_ichep_incl_ChangedTo_mujets.csv  JP_13TeV_25ns.csv  JP_13TeV_25ns_combToMujets.csv  JP_76X.csv  JP_76X_combToMujets.csv  SFb-pt_WITHttbar_payload_EPS13_noCSVSL.txt  cMVAv2Moriond17_2017_1_26_BtoH.csv  cMVAv2_76X_combToMujets.csv  cMVAv2_76X_prelim.csv  cMVAv2_80X_ichep_incl_ChangedTo_ttbar.csv
Content/interface/: Container.h  (+5 more)
TMVA/: setup.sh
config/: Binning.root  CernMacroConfig.xml  Datasets.cc  StopBckg.xml  datasets.xml  myBTAGconfig.xml  myBTAGconfig_ttjetsyst.xml  myBTAGconfig_wjetsyst.xml  myFlavorJESconfig.xml  myFourthGenconfig_Electron_Fall11.xml  myFourthGenconfig_Muon_Fall11.xml  myJESconfig.xml  myNPconfig.xml  myRefSelconfig.xml  mySUSYconfig.xml  myTopFCNCconfig_Electron.xml  myTopFCNCconfig_Muon.xml  myTprimeconfig.xml  myWtbCouplings.xml  myconfig.xml
macros/: Demo.cc  Demo_binning.cc  Style.C  get_number_of_events.sh  make_samples_xml.sh
test/: CMakeLists.txt  README.test
test/testKinFitter/: CMakeLists.txt  TestKinFitterSuite.cpp
test/testTools/: BTagWeightToolsTestSuite.cpp  CMakeLists.txt
(+808 files in other folders)
